--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,5 @@
 [deps]
-ExprTools = "e2ba6199-217a-4e67-a87a-7c52f15ade04"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 FileWatching = "7b1f6079-737a-58dc-b8bc-7a2ca5c1b5ee"
 Remark = "79b45036-8e38-5d04-8f49-b9fb23ff5a0d"
+Tricks = "410a4b4d-49e4-4fbc-ab6d-cb71b17b3775"
